[package]
name = "groth16-verif-without-risc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-groth16 = { version = "0.4.0", default-features = false }
ark-std = { version = "=0.4.0", default-features = false}
ark-ec = { version = "=0.4.1" }
ark-bn254 = { version = "=0.4.0" }
ark-crypto-primitives = { version = "=0.4.0", default-features = false  }
ark-relations = { version = "0.4.0", default-features = false }
ark-ff = { version = "0.4.0", default-features = false }
ark-bls12-377 = { version = "0.4.0", default-features = false, features = ["curve"] }
serde_json = "1.0.108"
serde = {version="1.0.193", features = ["derive"] }
ark-serialize = { version = "0.4.2",  features = ["derive"] }
